<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/black"
    android:scrollbars="none"
    android:id="@+id/HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".YourActivity">

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="@dimen/header_size"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                android:textStyle="bold">
            </TextView>

            <!-- Guideline for 2/3 width -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="1.3"
                />

            <!-- First Image -->
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <!-- Second Image -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_history"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView1"
                app:layout_constraintEnd_toStartOf="@id/imageView3"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <!-- Third Image -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_settings"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <!-- Chain the Images with equal spacing within the guideline range -->
            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="imageView1,imageView2,imageView3"
                app:layout_constraintHorizontal_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_title_1"
            android:textSize="@dimen/header_size"
            android:paddingLeft="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/white">
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tSERecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_title_2"
            android:textSize="@dimen/header_size"
            android:paddingLeft="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/white">
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp">
                
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featuredChartsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_title_3"
            android:textSize="@dimen/header_size"
            android:paddingLeft="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/white">
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trendingNowRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>