<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".MediaPlayer"
    android:scrollbars="none"
    android:overScrollMode="never">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:id="@+id/menu">

            <ImageButton
                android:id="@+id/kill_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/music_player_kill"/>

            <TextView
                android:id="@+id/song_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:fontFamily="@font/spotify_bold"
                android:text="@string/song_title_default"/>

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/music_player_menu"/>

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/Song_pic"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu"/>

                <LinearLayout
                    android:id="@+id/Song_title_and_author"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/Song_pic"
                    android:layout_marginTop="55dp"
                    android:layout_marginBottom="30dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Song_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/spotify_bold"
                            android:text="@string/song_title_default"/>

                        <TextView
                            android:id="@+id/Song_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/spotify_halfTrans"
                            android:textSize="15sp"
                            android:fontFamily="@font/spotify_nor"
                            android:text="@string/author_default"/>

                    </LinearLayout>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:src="@drawable/music_player_add"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressArea"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/Song_title_and_author"
                    android:orientation="vertical">

                    <ProgressBar
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:visibility="visible"
                        android:progressBackgroundTint="@color/spotify_halfTrans"
                        android:progressTint="#E0E0E0"
                        android:max="1000"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/current_time"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="viewStart"
                            android:textColor="@color/spotify_halfTrans"
                            android:fontFamily="@font/spotify_nor"
                            android:textSize="11sp"
                            android:text="@string/current_time_default"/>

                        <TextView
                            android:id="@+id/remain_time"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/spotify_halfTrans"
                            android:fontFamily="@font/spotify_nor"
                            android:textSize="11sp"
                            android:text="@string/remain_time_default"/>

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressArea"
                    android:id="@+id/main_btn_area"
                    android:layout_centerHorizontal="true">

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="center"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:paddingEnd="20dp"
                        android:id="@+id/shuffle_btn"
                        android:src="@drawable/music_player_shuffle"/>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="center"
                        android:background="@null"
                        android:layout_toEndOf="@+id/shuffle_btn"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:id="@+id/back_btn"
                        android:src="@drawable/music_player_back"/>

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="center"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:id="@+id/play_btn"
                        android:src="@drawable/music_player_pause"/>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="center"
                        android:background="@null"
                        android:layout_toStartOf="@+id/repeat_btn"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="17dp"
                        android:id="@+id/skip_btn"
                        android:src="@drawable/music_player_skip"/>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="center"
                        android:background="@null"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingStart="20dp"
                        android:id="@+id/repeat_btn"
                        android:src="@drawable/music_player_repeat"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/device_n_share"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_btn_area"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true">

                    <ImageButton
                        android:id="@+id/devices_btn"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingEnd="20dp"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/music_player_devices"/>

                    <ImageButton
                        android:id="@+id/share_song_btn"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingStart="25dp"
                        android:background="@null"
                        android:scaleType="center"
                        android:src="@drawable/music_player_share_song"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lyrics_area"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:background="@drawable/lyrics_background"
                    android:layout_below="@+id/device_n_share"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    android:layout_centerHorizontal="true"></LinearLayout>

            </RelativeLayout>

        </ScrollView>